gccida/g2/gen_peephole2_1261
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_peephole2_1261/src/insn-emit.c:18250:18: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v11 = gen_rtx( ( rtx_code)*( _WORD *)v5, ( machine_mode)*( ( unsigned __int8 *)v5 + 2), v10, v9); 
                 ^~~~~~~~
                 rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_peephole2_1261/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_peephole2_1261/src/insn-emit.c:18250:27: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
v11 = gen_rtx( ( rtx_code)*( _WORD *)v5, ( machine_mode)*( ( unsigned __int8 *)v5 + 2), v10, v9); 
               ~~~~~~~~~~~^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_peephole2_1261/src/insn-emit.c:18250:44: error: use of undeclared identifier 'machine_mode'
v11 = gen_rtx( ( rtx_code)*( _WORD *)v5, ( machine_mode)*( ( unsigned __int8 *)v5 + 2), v10, v9); 
                                           ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_peephole2_1261/src/obj/insn-emit.o] Error 1
